[project]
name = "job-automation-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncpg>=0.31.0",
    "chainlit>=2.9.6",
    "chatbot-py>=2.74",
    "dotenv>=0.9.9",
    "fastapi>=0.128.0",
    "langchain>=1.2.6",
    "langchain-community>=0.4.1",
    "langchain-groq>=1.1.1",
    "langchain-openai>=1.1.7",
    "langgraph>=1.0.6",
    "langgraph-checkpoint-postgres>=3.0.3",
    "msgpack>=1.1.2",
    "playwright>=1.57.0",
    "psycopg2>=2.9.11",
    "psycopg[binary,pool]>=3.3.2",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.45",
    "streamlit>=1.53.0",
    "undetected-chromedriver>=3.5.5",
    "uvicorn>=0.40.0",
]
